Support Quark recipes and explain blocked crafting trees